--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -372,9 +372,6 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="buy_price"/>
-     </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
@@ -431,6 +428,12 @@
         <string>Test</string>
        </property>
       </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLineEdit" name="wid_buy_price"/>
+     </item>
+     <item row="1" column="3">
+      <widget class="QLineEdit" name="wid_sell_price"/>
      </item>
     </layout>
    </widget>
@@ -613,7 +616,7 @@
      <x>0</x>
      <y>0</y>
      <width>1190</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
