--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -435,6 +435,13 @@
      <item row="1" column="3">
       <widget class="QLineEdit" name="wid_sell_price"/>
      </item>
+     <item row="3" column="2">
+      <widget class="QPushButton" name="btn_TEST_2">
+       <property name="text">
+        <string>Test</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QSplitter" name="splitter">
@@ -616,7 +623,7 @@
      <x>0</x>
      <y>0</y>
      <width>1190</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
