--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -6,66 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1190</width>
-    <height>597</height>
+    <width>1129</width>
+    <height>762</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="gridLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>170</y>
-      <width>351</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="gridLayout_3">
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string>  비밀번호  </string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="input_acc_pw">
-       <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QPushButton" name="btn_START">
-       <property name="text">
-        <string>실행</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <widget class="QPushButton" name="btn_STOP">
-       <property name="text">
-        <string>정지</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QTableWidget" name="table_summary">
     <property name="geometry">
      <rect>
       <x>390</x>
       <y>50</y>
-      <width>592</width>
+      <width>702</width>
       <height>211</height>
      </rect>
     </property>
@@ -148,10 +102,10 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>990</x>
-      <y>90</y>
+      <x>10</x>
+      <y>310</y>
       <width>181</width>
-      <height>151</height>
+      <height>161</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
@@ -185,8 +139,44 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_11">
+       <property name="text">
+        <string>거래량 :</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLabel" name="te_iteminfo_percent">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
      <item row="2" column="1">
       <widget class="QLabel" name="te_iteminfo_price">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLabel" name="te_iteminfo_vol">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -211,44 +201,8 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QLabel" name="te_iteminfo_vol">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QLabel" name="te_iteminfo_name">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_11">
-       <property name="text">
-        <string>거래량 :</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLabel" name="te_iteminfo_percent">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -281,8 +235,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>60</y>
+      <x>60</x>
+      <y>280</y>
       <width>91</width>
       <height>20</height>
      </rect>
@@ -316,8 +270,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>230</y>
+      <x>10</x>
+      <y>530</y>
       <width>64</width>
       <height>23</height>
      </rect>
@@ -335,8 +289,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>220</y>
+      <x>990</x>
+      <y>10</y>
       <width>61</width>
       <height>25</height>
      </rect>
@@ -351,21 +305,24 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>11</x>
-      <y>11</y>
+      <x>10</x>
+      <y>50</y>
       <width>351</width>
-      <height>151</height>
+      <height>211</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="code_edit">
-       <property name="enabled">
-        <bool>true</bool>
+     <item row="4" column="3">
+      <widget class="QPushButton" name="btn_TEST">
+       <property name="text">
+        <string>Test</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="buy_sell_count"/>
+     </item>
+     <item row="3" column="2">
       <widget class="QPushButton" name="btn_BUY">
        <property name="text">
         <string>매수</string>
@@ -373,16 +330,6 @@
       </widget>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>수량</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>금액</string>
@@ -392,14 +339,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="3">
-      <widget class="QPushButton" name="btn_SELL">
-       <property name="text">
-        <string>매도</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
+     <item row="1" column="0">
       <widget class="QLabel" name="label">
        <property name="enabled">
         <bool>true</bool>
@@ -412,33 +352,81 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="buy_sell_count"/>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>수량</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
      </item>
-     <item row="0" column="2">
+     <item row="3" column="3">
+      <widget class="QPushButton" name="btn_SELL">
+       <property name="text">
+        <string>매도</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
       <widget class="QPushButton" name="btn_ITEM_LOOKUP">
        <property name="text">
         <string>조회</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="3">
-      <widget class="QPushButton" name="btn_TEST">
+     <item row="2" column="2">
+      <widget class="QLineEdit" name="wid_buy_price"/>
+     </item>
+     <item row="2" column="3">
+      <widget class="QLineEdit" name="wid_sell_price"/>
+     </item>
+     <item row="4" column="2">
+      <widget class="QPushButton" name="btn_TEST_2">
        <property name="text">
         <string>Test</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="2">
-      <widget class="QLineEdit" name="wid_buy_price"/>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="code_edit">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
-     <item row="1" column="3">
-      <widget class="QLineEdit" name="wid_sell_price"/>
-     </item>
-     <item row="3" column="2">
-      <widget class="QPushButton" name="btn_TEST_2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_18">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="text">
-        <string>Test</string>
+        <string>  비밀번호  </string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="btn_START">
+       <property name="text">
+        <string>실행</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QPushButton" name="btn_STOP">
+       <property name="text">
+        <string>정지</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="input_acc_pw">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
        </property>
       </widget>
      </item>
@@ -448,9 +436,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
-      <width>351</width>
-      <height>281</height>
+      <y>560</y>
+      <width>1101</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="orientation">
@@ -555,7 +543,7 @@
    <widget class="QWidget" name="gridLayoutWidget_5">
     <property name="geometry">
      <rect>
-      <x>769</x>
+      <x>880</x>
       <y>270</y>
       <width>211</width>
       <height>51</height>
@@ -616,13 +604,35 @@
      </item>
     </layout>
    </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>351</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="text">
+     <string>MAIN</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1190</width>
+     <width>1129</width>
      <height>21</height>
     </rect>
    </property>
