--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -382,13 +382,6 @@
      <item row="2" column="3">
       <widget class="QLineEdit" name="wid_sell_price"/>
      </item>
-     <item row="4" column="2">
-      <widget class="QPushButton" name="btn_TEST_2">
-       <property name="text">
-        <string>Test</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="code_edit">
        <property name="enabled">
@@ -437,7 +430,7 @@
      <rect>
       <x>10</x>
       <y>560</y>
-      <width>1101</width>
+      <width>1391</width>
       <height>151</height>
      </rect>
     </property>
@@ -446,7 +439,7 @@
     </property>
     <widget class="QTextEdit" name="text_edit">
      <property name="enabled">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -543,8 +536,8 @@
    <widget class="QWidget" name="gridLayoutWidget_5">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>210</y>
+      <x>1200</x>
+      <y>200</y>
       <width>211</width>
       <height>51</height>
      </rect>
@@ -611,7 +604,7 @@
      <x>0</x>
      <y>0</y>
      <width>1419</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
