--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -442,6 +442,13 @@
         </property>
        </widget>
       </item>
+      <item row="4" column="2">
+       <widget class="QPushButton" name="btn_TEST_2">
+        <property name="text">
+         <string>Test2</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
     <widget class="QWidget" name="layoutWidget">
