--- a/KIWOOM/interface.ui
+++ b/KIWOOM/interface.ui
@@ -692,6 +692,13 @@
         </property>
        </widget>
       </item>
+      <item row="6" column="1">
+       <widget class="QLineEdit" name="buy_sell_count">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </widget>
